fix: collapse news container on mobile (#46)
* fix: collapse news container on mobile

* chore: remove unused code

--- a/src/containers/home/section.scss
+++ b/src/containers/home/section.scss
@@ -10,3 +10,9 @@
   height: 100%;
   overflow-x: hidden;
 }
+
+.homeSection--collapseOnMobile {
+  @include media('<tablet') {
+    min-height: 0 !important;
+  }
+}
